# mlops-pipeline

./: LICENSE  README.md  metadata.yaml  pyproject.toml
