[tool.poetry]
name = "mlops-pipeline"
version = "0.0.1"
description = "MLOps Pipeline for ML automation"
authors = ["cowtree <huycaotrido@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10.9"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
numba = "^0.56.4"
mlflow = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "src.scripts.main:start"
